--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
       </button>
     </div>
 
-    <div class="form-group">
+    <div *ngIf="password" class="form-group">
       <label>Your Password</label>
       <input [value]="password" />
     </div>
