--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
     <h1>Password Generator</h1>
 
     <div class="form-group">
-      <label>Enter Length</label>
-      <input (input)="onPasswordLength($event)" />
+      <label>Length</label>
+      <input placeholder="Enter Length" (input)="onPasswordLength($event)" />
     </div>
 
     <div class="form-group-checkbox">
